src/objects/LoyaltyProgramTier__c.object
<CustomObject>
    <description>Used to track the tiers within program. Example could be a loyalty Program with bronze, silver, and gold tiers.

Note that the API label says LoyaltyProgramTier since that was the first design of it and intention for it - but has been relabeled to have a broader meaning and sense since whereas types of programs has arised as a need.</description>
    <fields>
        <fullName>AccountProgram__c</fullName>
        <label>Account Program</label>
        <referenceTo>LoyaltyProgram__c</referenceTo>
        <relationshipLabel>Account Program Tiers</relationshipLabel>
        <relationshipName>AccountProgramTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DEPRecordHash__c</fullName>
        <label>DEP Record Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEPUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>DEP Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Program Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Program Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>